# spopt-r

./: .Rbuildignore  .Rprofile  .gitignore  CONTRIBUTING.md  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  _pkgdown.yml  configure  configure.win
R/: data.R  distance.R  extendr-wrappers.R  huff.R  locate_cflp.R  locate_frlm.R  locate_lscp.R  locate_mclp.R  locate_p_center.R  locate_p_dispersion.R  locate_p_median.R  region_azp.R  region_max_p.R  region_skater.R  region_spenc.R  region_ward.R  spopt-package.R  utils.R  weights.R
data/: tarrant_travel_times.rda
data-raw/: tarrant_travel_times.R
docs/: 404.html  CONTRIBUTING.html  LICENSE-text.html  LICENSE.html  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
man/: azp.Rd  cflp.Rd  distance_matrix.Rd  distance_matrix_geographic.Rd  frlm.Rd  huff.Rd  lscp.Rd  max_p_regions.Rd  mclp.Rd  p_center.Rd  p_dispersion.Rd  p_median.Rd  rust_azp.Rd  rust_cflp.Rd  rust_connected_components.Rd  rust_distance_matrix_euclidean.Rd  rust_distance_matrix_manhattan.Rd  rust_frlm_greedy.Rd  rust_huff.Rd  rust_is_connected.Rd  rust_lscp.Rd  rust_max_p.Rd  rust_mclp.Rd  rust_mst.Rd  rust_p_center.Rd  rust_p_dispersion.Rd  rust_p_median.Rd  rust_skater.Rd  rust_spenc.Rd  rust_ward_constrained.Rd  skater.Rd  sp_weights.Rd  spenc.Rd  (+3 more)
src/rust/: Cargo.toml
src/rust/src/: distance.rs  graph.rs  lib.rs
src/rust/src/locate/: cflp.rs  coverage.rs  frlm.rs  huff.rs  mod.rs  p_center.rs  p_dispersion.rs  p_median.rs  solver.rs
src/rust/src/region/: azp.rs  maxp.rs  mod.rs  skater.rs  spenc.rs  ward.rs
(+66 files in other folders)
